--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -31,5 +31,6 @@
     site.data.ui-text[site.locale].powered_by | default: "Powered by" }} <a href="http://jekyllrb.com" rel="nofollow">Jekyll</a> &amp; <a
             href="https://github.com/academicpages/academicpages.github.io">AcademicPages</a>, a fork of <a
             href="https://mademistakes.com/work/minimal-mistakes-jekyll-theme/" rel="nofollow">Minimal Mistakes</a>.
-    views by </span><span id="busuanzi_container_site_uv"> <span id="busuanzi_value_site_uv"></span> vistors from Dec 2, 2020.</span>
+    <span id="busuanzi_container_site_pv"> | <span id="busuanzi_value_site_pv"></span> views by </span><span
+            id="busuanzi_container_site_uv"> <span id="busuanzi_value_site_uv"></span> vistors from Sep 2023.</span>
 </div>
